# shapely-stubs

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
shapely-stubs/: _buildcfg.pyi  affinity.pyi  coordinates.pyi  coords.pyi  ctypes_declarations.pyi  errors.pyi  geos.pyi  impl.pyi  iterops.pyi  lib.pyi  linref.pyi  ops.pyi  predicates.pyi  prepared.pyi  strtree.pyi  topology.pyi  validation.pyi  wkb.pyi  wkt.pyi
shapely-stubs/algorithms/: cga.pyi  polylabel.pyi
shapely-stubs/geometry/: __init__.pyi  base.pyi  collection.pyi  geo.pyi  linestring.pyi  multilinestring.pyi  multipoint.pyi  multipolygon.pyi  point.pyi  polygon.pyi  proxy.pyi
shapely-stubs/speedups/: __init__.pyi
shapely-stubs/vectorized/: __init__.pyi
tests/: __init__.py  test_coordinates.py  test_lib.py  test_shapely.py
