[tool.poetry]
name = "shapely-stubs"
version = "1.8.0.1"
description = "Type stubs for the Shapely Python library."
authors = ["Jeremiah England <englandtuning@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "shapely_stubs"}]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
shapely = "^1.8.5.post1"
ruff = "^0.0.93"
pre-commit = "^2.20.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
# See https://github.com/microsoft/pyright/blob/main/docs/configuration.md
# extraPaths = ["src"]
# pythonVersion = "3.10"
# See table here: https://github.com/microsoft/pyright/blob/main/docs/configuration.md#diagnostic-rule-defaults
strict = ["src/**/*.pyi"]
useLibraryCodeForTypes = true
# These are all the options that pyright has which are not turned on by "strict mode" enabled above.
reportCallInDefaultInitializer = "warning"
reportImplicitStringConcatenation = "warning"
reportMissingSuperCall = "warning"
reportPropertyTypeMismatch = "warning"
reportUninitializedInstanceVariable = "error"
reportUnnecessaryTypeIgnoreComment = "warning"
reportUnusedCallResult = "warning"

[tool.isort]
profile="black"
py_version=310
skip_gitignore=true
