[tool.poetry]
name = "shapely-stubs"
version = "1.8.0.1"
description = "Type stubs for the Shapely Python library."
authors = ["Jeremiah England <englandtuning@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "shapely-stubs"}]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
shapely = "^2.0b2"
ruff = "^0.0.93"
pre-commit = "^2.20.0"
isort = "^5.10.1"
mypy = "^0.991"
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
# See https://github.com/microsoft/pyright/blob/main/docs/configuration.md
typeCheckingMode = "strict"
stubPath = "."
# So we catch lines in `with pytest.raises` blocks that do not raise a type hint error:
reportUnnecessaryTypeIgnoreComment = "error"

[tool.isort]
profile="black"
py_version=310
skip_gitignore=true
